# mtc

./: .gitignore  CMakeLists.txt  CreateIcon.ps1  LICENSE  README.md  build_log.txt
.github/workflows/: build.yml
.workflow/: build.yml
data/: config.json
docs/: build-guide.md  development-guide.md
docs/superpowers/plans/: 2026-04-21-search-and-tree-view.md  2026-04-21-search-history.md
docs/superpowers/specs/: 2026-04-21-search-and-tree-view-design.md  2026-04-21-search-history-design.md
resources/: Info.plist  mtc.manifest  mtc.rc
src/: main.cpp
src/core/: ConfigManager.cpp  ConfigManager.h  SearchHistory.cpp  SearchHistory.h  SecretStore.cpp  SecretStore.h  SshClient.cpp  SshClient.h  TerminalLauncher.cpp  TerminalLauncher.h  Types.h
src/ui/: CredentialDialog.cpp  CredentialDialog.h  CredentialManagerDialog.cpp  CredentialManagerDialog.h  EnvVarPanel.cpp  EnvVarPanel.h  MainFrame.cpp  MainFrame.h  ProfileDialog.cpp  ProfileDialog.h  ProfileTreeBuilder.cpp  ProfileTreeBuilder.h  RemoteFileBrowserDialog.cpp  RemoteFileBrowserDialog.h  SshHostDialog.cpp  SshHostDialog.h  SshHostManagerDialog.cpp  SshHostManagerDialog.h
src/utils/: PathUtils.cpp  PathUtils.h
tests/core/: SearchHistoryTests.cpp
tests/ui/: ProfileTreeBuilderTests.cpp
